tests/blob/non_null_fields_faulty.sy
A :: blob {
    a: int,
}

start :: fn do
    a := A {}
    print' a.a
end
// error: $MissingField
